sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: '(' expected but identifier found.
      if plusPetit(j-1,j)=true{
         ^AlgBubbleSort1:9: error: illegal start of simple expression
    }
    ^