sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var taille=getNombreValeurs()
  for (i <- 0 to taille-1){
    for (j <- 1 to i){
      if plusPetit(j-1,j)=true{
        echange(j-1,j)
      }
    }
  }
}